Fix fallback map size on tablet and desktop

--- a/source/sass/blocks/contact-us.scss
+++ b/source/sass/blocks/contact-us.scss
@@ -108,4 +108,9 @@
   top: 0;
   left: 0;
   height: 362px;
+
+  @include md-size() {
+    width: 100%;
+    height: 400px;
+  }
 }
